<resources>
    <string name="app_name">HR Management</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">HR Management</string>
    <string name="hr">HR</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="powered_by">powered by</string>
    <string name="developer">A Studio</string>
    <string name="more">More…</string>
    <string name="attendance_summery">Attendance Summery</string>
    <string name="john_q_public">John Q. Public</string>
    <string name="leave_type">Leave Type</string>
    <string name="from">From</string>
    <string name="leave_start_from">Leave start from</string>
    <string name="select_date">Select Date</string>
    <string name="to">To</string>
    <string name="leave_end">Leave end</string>
    <string name="no_of_leave">No. of leave</string>
    <string name="_99_days">99 Days</string>
    <string name="remarks">Remarks</string>
    <string name="special_reason_for_the_leave">Special reason for the leave</string>
    <string name="request_to">Request to</string>
    <string name="leave_reason">Leave Reason</string>
    <string name="email">johnqpublic@example.com</string>
    <string name="designation">General Position</string>
    <string name="employee_image">Employee Image</string>
    <string name="employee_id">Employee Id</string>
    <string name="far_far_away">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="type">Type</string>
    <string name="total">Total</string>
</resources>
