<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave_type" />

            <Spinner
                android:id="@+id/spinLeaveType"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/from" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etLeaveStart"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.7"
                    android:background="@null"
                    android:enabled="false"
                    android:inputType="text"
                    android:hint="@string/leave_start_from" />

                <Button
                    android:id="@+id/btn_leave_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/select_date" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/to" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etLeaveEnd"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.7"
                    android:background="@null"
                    android:enabled="false"
                    android:inputType="text"
                    android:hint="@string/leave_end" />

                <Button
                    android:id="@+id/btn_leave_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/select_date" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_of_leave" />

            <EditText
                android:id="@+id/etLeaveDays"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:enabled="false"
                android:text="@string/_99_days" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remarks" />

            <EditText
                android:id="@+id/etRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/special_reason_for_the_leave"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/request_to" />

            <Spinner
                android:id="@+id/spinLeaveRequestTo"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>