<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvLeaveApplicationItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="3dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_leave_applier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/john_q_public"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/right"
            app:layout_constraintTop_toBottomOf="@id/tv_leave_applier_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLeaveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave_reason"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_leave_applier_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_leave"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTotalLeaveDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_99_days"
                android:textSize="16sp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>