<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvLeaveApplicationItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="3dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/iv_employee_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/employee_image"
            android:src="@drawable/potrait"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/john_q_public"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_employee_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_employee_designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            android:text="@string/designation"
            app:layout_constraintLeft_toRightOf="@id/iv_employee_image"
            app:layout_constraintTop_toBottomOf="@id/tv_employee_name" />


        <TextView
            android:id="@+id/tv_employee_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            android:text="@string/email"
            app:layout_constraintLeft_toRightOf="@id/iv_employee_image"
            app:layout_constraintTop_toBottomOf="@id/tv_employee_designation" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>